Opened 18 years ago

Closed 18 years ago

#1122 closed bug (fixed)

Kernel idle thread mixup

Reported by: jonas.kirilla Owned by: axeld
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc: bonefish
Blocked By: Blocking:
Platform: All

Description

Somehow a userland thread has replaced or tainted(?) the kernel team's idle thread.

I suppose it's the app_server window thread for the Mail application. Mail is no longer running. I don't recall if it crashed or not. I don't think it did.

See screenshots.

Attachments (3)

screen5.png (65.1 KB ) - added by jonas.kirilla 18 years ago.
screen6.png (71.5 KB ) - added by jonas.kirilla 18 years ago.
screen7.png (81.1 KB ) - added by jonas.kirilla 18 years ago.

Download all attachments as: .zip

Change History (7)

by jonas.kirilla, 18 years ago

Attachment: screen5.png added

by jonas.kirilla, 18 years ago

Attachment: screen6.png added

by jonas.kirilla, 18 years ago

Attachment: screen7.png added

comment:1 by bonefish, 18 years ago

Cc: bonefish added

According to your "top", the thread ID is 1, so it probably has only been renamed. Given the name, I tend to blame the app server. My best guess would be that ServerWindow::SetTitle() has been invoked before MessageLooper::Run(). Since MessageLooper::fThread is not initialized in the constructor, it might have any value (even 1) in that case.

comment:2 by bonefish, 18 years ago

Forgot to add: The first thing the ServerWindow constructor does is invoking SetTitle() (which definitely happens before Run()), so it's actually pretty likely that a random thread is renamed.

comment:3 by bonefish, 18 years ago

Component: System/KernelServers/app_server

comment:4 by axeld, 18 years ago

Resolution: fixed
Status: newclosed

Thanks for the helpful investigation, Ingo :-) Fixed by hrev20419 (kernel no longer allows everyone to rename a thread) and hrev20420 (missing initializations in MessageLooper, app_server).

Note: See TracTickets for help on using tickets.