The kernel no longer allows anyone to rename a thread unless you're the current owner of that thread - this fixes the kernel part of bug #1122.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20419 a95241bf-73f2-0310-859d-f6bbb57e9c96